# medcare_2022

./: README.md  pyproject.toml
app/: skill_level_list.txt  tag_list.txt
app/cf/: settings.py  urls.py
app/jobs/: admin.py  models.py  urls.py  views.py
app/jobs/management/commands/: add_jobs.py  add_skill_level.py  add_tags.py
app/jobs/migrations/: 0001_initial.py  0002_job_tags.py  0003_alter_job_dislikes_alter_job_likes.py  0004_job_description.py  0005_alter_job_skill_level.py  0006_skilllevel_alter_job_skill_level.py  0007_alter_job_skill_level.py
app/lists/: tag_list.txt  vaccination_list.txt  work_type_list.txt
app/providers/: admin.py  models.py  urls.py  views.py
app/providers/management/commands/: add_districts.py  add_provider_addresses.py  add_provider_contact.py  add_provider_other_details.py  (+3 more)
app/providers/migrations/: 0001_initial.py  0002_alter_address_postal_code.py  0003_course_relationship_otherdetails_language_and_more.py  0004_remove_education_course1_remove_education_course2_and_more.py  0005_worktype_workinterest.py  0006_shift_workschedule_workinterest_other_commitments_and_more.py  0007_rename_otherdetails_otherdetail.py  0008_vaccination_immunisationstatement.py  0009_vaccination_b_date_vaccination_i_date.py  0010_alter_vaccination_b_date_alter_vaccination_i_date.py  0011_remove_immunisationstatement_vaccination1_and_more.py
app/static/css/: styles.css
app/templates/: base.html  header.html
app/templates/jobs/: job_list.html
app/templates/providers/: provider_detail.html  provider_form.html  provider_list.html
