[tool.poetry]
name = "medcare-2022"
version = "0.1.0"
description = ""
authors = ["Swelan Auguste <swelanauguste@gmail.com>"]
readme = "README.md"
packages = [{include = "medcare_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-crispy-forms = "^1.14.0"

[tool.poetry.group.dev.dependencies]
Faker = "^15.0.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
